--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-    <title>Home Questionnaire<span id="selection-marker-1" class="redactor-selection-marker"></span></title> 
+    <title>Coinmotion Segment Test<span id="selection-marker-1" class="redactor-selection-marker"></span></title> 
 
     <!--Placeholder for Segment Snippet --> 
 
