--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         e.preventDefault();
         var form = e.target;
         var email = form["email"].value;
-        var private = document.querySelector("input[type='radio'][name=private]:checked").value;
+        var private = document.querySelector('input[name = "account_type"]:checked').value;
         var user = {
             email: email, 
             private: private,
